@@ -15,6 +15,7 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 import static ssg.middlepj.pharmafinder.util.XMLParser.xmlParser;
@@ -27,15 +28,15 @@ public class PharmacyServiceImpl implements PharmacyService {
 
     @Override
     public List<PharmacyDto> selectPharmacies(PharmacyParam pharmacyParam ) throws IOException, JDOMException, ParserConfigurationException, SAXException {
-        StringBuilder urlBuilder = new StringBuilder("http://apis.data.go.kr/B552657/ErmctInsttInfoInqireService/getParmacyListInfoInqire"); /*URL*/
-        urlBuilder.append("?" + URLEncoder.encode("serviceKey", "UTF-8") + SERVICE_KEY); /*Service Key*/
-        urlBuilder.append("&" + URLEncoder.encode("Q0", "UTF-8") + "=" + URLEncoder.encode(pharmacyParam.getQ0(), "UTF-8")); /*주소(시도)*/
-        urlBuilder.append("&" + URLEncoder.encode("Q1", "UTF-8") + "=" + URLEncoder.encode(pharmacyParam.getQ1(), "UTF-8")); /*주소(시군구)*/
-        urlBuilder.append("&" + URLEncoder.encode("QN", "UTF-8") + "=" + URLEncoder.encode(pharmacyParam.getQN(), "UTF-8")); /*기관명*/
-        urlBuilder.append("&" + URLEncoder.encode("ORD", "UTF-8") + "=" + URLEncoder.encode(pharmacyParam.getORD(), "UTF-8")); /*순서*/
-        urlBuilder.append("&" + URLEncoder.encode("pageNo", "UTF-8") + "=" + URLEncoder.encode(String.valueOf(pharmacyParam.getPageNo()), "UTF-8")); /*페이지 번호*/
-        urlBuilder.append("&" + URLEncoder.encode("numOfRows", "UTF-8") + "=" + URLEncoder.encode(String.valueOf(pharmacyParam.getNumOfRows()), "UTF-8")); /*목록 건수*/
-        URL url = new URL(urlBuilder.toString());
+        /*URL*/
+        String urlBuilder = "http://apis.data.go.kr/B552657/ErmctInsttInfoInqireService/getParmacyListInfoInqire" + "?" + URLEncoder.encode("serviceKey", StandardCharsets.UTF_8) + SERVICE_KEY + /*Service Key*/
+                "&" + URLEncoder.encode("Q0", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(pharmacyParam.getQ0(), StandardCharsets.UTF_8) + /*주소(시도)*/
+                "&" + URLEncoder.encode("Q1", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(pharmacyParam.getQ1(), StandardCharsets.UTF_8) + /*주소(시군구)*/
+                "&" + URLEncoder.encode("QN", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(pharmacyParam.getQN(), StandardCharsets.UTF_8) + /*기관명*/
+                "&" + URLEncoder.encode("ORD", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(pharmacyParam.getORD(), StandardCharsets.UTF_8) + /*순서*/
+                "&" + URLEncoder.encode("pageNo", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(String.valueOf(pharmacyParam.getPageNo()), StandardCharsets.UTF_8) + /*페이지 번호*/
+                "&" + URLEncoder.encode("numOfRows", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(String.valueOf(pharmacyParam.getNumOfRows()), StandardCharsets.UTF_8); /*목록 건수*/
+        URL url = new URL(urlBuilder);
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setRequestMethod("GET");
         conn.setRequestProperty("Content-type", "application/json");
